--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-        <title>Station 7</title>
+        <title>Stundenplan</title>
         <link rel="stylesheet" href="stylesheet_Stundenplan.css">
    </head>
    <body>
