--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <body>
 	<table>
 		<tr>
+			<th>Stunde</th>
 			<th class="Wochentag">Montag</th>
 			<th class="Wochentag">Dienstag</th>
 			<th class="Wochentag">Mittwoch</th>
@@ -14,6 +15,7 @@
 			<th class="Wochentag">Freitag</th>
 		</tr>
 		<tr>
+			<td>1.</td>
 			<td class="Sonstige">Kunst</td>
 			<td class="Naturwissenschaften">Mathe</td>
 			<td class="Sonstige">Sport</td>
@@ -21,6 +23,7 @@
 			<td class="Sonstige">PoWi</td>
 		</tr>
 		<tr>
+			<td>2.</td>
 			<td class="Sonstige">Kunst</td>
 			<td class="Naturwissenschaften">Mathe</td>
 			<td class="Sonstige">Sport</td>
@@ -28,6 +31,7 @@
 			<td class="Sonstige">PoWi</td>
 		</tr>
 		<tr>
+			<td>3.</td>
 			<td class="Naturwissenschaften">Chemie</td>
 			<td class="Sprachen">Deutsch</td>
 			<td class="Sprachen">Latein</td>
@@ -35,6 +39,7 @@
 			<td class="Sonstige">Religion</td>
 		</tr>
 		<tr>
+			<td>4.</td>
 			<td class="Naturwissenschaften">Erdkunde</td>
 			<td class="Sprachen">Latein</td>
 			<td class="Sprachen">Latein</td>
@@ -42,6 +47,7 @@
 			<td class="Sprachen">Deutsch</td>
 		</tr>
 		<tr>
+			<td>5.</td>
 			<td class="Naturwissenschaften">Mathe</td>
 			<td class="Sonstige">Geschichte</td>
 			<td class="Sprachen">Englisch</td>
@@ -49,6 +55,7 @@
 			<td class="Sprachen">Deutsch</td>
 		</tr>
 		<tr>
+			<td>6.</td>
 			<td class="Naturwissenschaften">Physik</td>
 			<td class="Naturwissenschaften">Erdkunde</td>
 			<td class="Naturwissenschaften">Mathe</td>
@@ -56,6 +63,7 @@
 			<td></td>
 		</tr>
 		<tr>
+			<td>7.</td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -63,6 +71,7 @@
 			<td></td>
 		</tr>
 		<tr>
+			<td>8.</td>
 			<td class="Sonstige">Geschichte</td>
 			<td></td>
 			<td class="Sonstige">WPU</td>
@@ -70,6 +79,7 @@
 			<td></td>
 		</tr>
 		<tr>
+			<td>9.</td>
 			<td></td>
 			<td></td>
 			<td class="Sonstige">WPU</td>
